# TWE

./: .gitignore  CMakeLists.txt  README.md
cmake-file-for-scripts-and-build-creation-example/: CMakeLists.txt
include/: engine.hpp  test.hpp
include/bullet3/LinearMath/: btMatrix3x3.h  btQuaternion.h
include/entity/: behavior.hpp  entity.hpp
include/glad/: glad.h
include/gui/: gui-components-panel.hpp  gui-components.hpp  gui-console-panel.hpp  gui-directory-panel.hpp  gui-drag-and-drop-type.hpp  gui-scene-panel.hpp  gui-start-panel.hpp  gui-state-specification.hpp  gui-types.hpp  gui-viewport-panel.hpp  gui.hpp  igui-panel.hpp
include/input/: action.hpp  input-specification.hpp  input.hpp  keyboard.hpp  mouse.hpp  window.hpp
include/model-loader/: model-loader-data.hpp  model-loader.hpp  modelloader.hpp
include/registry/: registry-loader.hpp  registry.hpp
include/renderer/: camera.hpp  debug-camera.hpp  ebo.hpp  fbo.hpp  gui.hpp  material.hpp  renderer.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp
include/scene/: iscene-audio.hpp  iscene-physics.hpp  iscene-scripts.hpp  iscene.hpp  physics-raycast.hpp  scene-audio.hpp  scene-bullet-debug-drawer.hpp  scene-camera-specification.hpp  scene-physics.hpp  scene-scripts.hpp  scene-serializer.hpp  scene.hpp  shape-specification.hpp  shape.hpp  time.hpp
include/scene/components/: audio-component.hpp  camera-component.hpp  components.hpp  creation-type-component.hpp  empty-component.hpp  id-component.hpp  light-component.hpp  mesh-component.hpp  mesh-renderer-component.hpp  name-component.hpp  parent-childs-component.hpp  physics-components.hpp  physicsComponents.hpp  script-component.hpp  transform-component.hpp
include/scene/components/audio-specifications/: sound-source-specification.hpp
include/scene/components/script-specifications/: script-specification.hpp
include/stream/: build-creator.hpp  dll-creator.hpp  file.hpp  project-creator.hpp  registry-recorder.hpp  script-creator.hpp  twe-type.hpp
include/twe/: camera.hpp  ebo.hpp  engine.hpp  fbo.hpp  file.hpp  gui.hpp  light.hpp  material.hpp  mesh.hpp  modelloader.hpp  object.hpp  physics.hpp  scene.hpp  shader.hpp  shape.hpp  test.hpp  texture.hpp  time.hpp  transform.hpp  twelogo.hpp  vao.hpp  vbo.hpp
include/twe-math/: twe-math.hpp
include/ui-build/: ui-build.hpp
include/undo-redo/: iur-command.hpp  ur-control.hpp
include/undo-redo/ur-commands/: ur-commands.hpp
include/undo-redo/ur-commands/audio-component/: add-audio-component-command.hpp  add-sound-source-audio-component-command.hpp  change-audio-component-properties-command.hpp  remove-audio-component-command.hpp  remove-sound-source-aduio-component-command.hpp
include/undo-redo/ur-commands/camera-component/: add-camera-component-command.hpp  change-camera-component-state-command.hpp  remove-camera-component-command.hpp
include/undo-redo/ur-commands/entity/: copy-entity-command.hpp  create-entity-command.hpp  drag-and-drop-entity-command.hpp  remove-entity-command.hpp
include/undo-redo/ur-commands/light-component.hpp/: add-light-component-command.hpp  change-light-component-state-command.hpp  remove-light-component-command.hpp
include/undo-redo/ur-commands/mesh-component/: add-mesh-component-command.hpp  (+2 more)
lib/: glfw3.lib
lib/Assimp/: assimp-vc142-mtd.lib
lib/Bullet3/: Bullet3Collision_vs2010_debug.lib  Bullet3Common_vs2010_debug.lib  Bullet3Dynamics_vs2010_debug.lib  Bullet3Geometry_vs2010_debug.lib  BulletInverseDynamicsUtils_vs2010_debug.lib  BulletInverseDynamics_vs2010_debug.lib  BussIK_vs2010_debug.lib  LinearMath_vs2010_debug.lib  OpenGL_Window_vs2010_debug.lib
scenes/: testscene.json
scripts/: camera-controller.hpp  dir-behavior.hpp  rotate-rgb-cube.hpp
shaders/: collider.frag  collider.vert  cubemap.frag  cubemap.vert  default.frag  default.vert  light.frag  texture.frag  ui.frag  ui.vert
src/: engine.cpp  main.cpp  test.cpp
src/entity/: entity.cpp
src/glad/: glad.c
src/gui/: gui-components-panel.cpp  gui-components.cpp  gui-console-panel.cpp  gui-directory-panel.cpp  gui-drag-and-drop-type.cpp  gui-scene-panel.cpp  gui-start-panel.cpp  gui-types.cpp  gui-viewport-panel.cpp  gui.cpp
src/input/: input-specification.cpp  input.cpp  window.cpp
src/model-loader/: model-loader-data.cpp  model-loader.cpp  modelloader.cpp  modelloaderdata.cpp
src/models/tophat/: TopHat.mtl
src/renderer/: camera.cpp  debug-camera.cpp  ebo.cpp  fbo.cpp  gui.cpp  material.cpp  renderer.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp
src/scene/: scene-audio.cpp  scene-physics.cpp  scene-scripts.cpp  scene-serializer.cpp  scene.cpp  shape.cpp  time.cpp
src/scene/components/: audio-component.cpp  camera-component.cpp  creation-type-component.cpp  id-component.cpp  light-component.cpp  lightComponent.cpp  mesh-component.cpp  mesh-renderer-component.cpp  meshComponent.cpp  meshRendererComponent.cpp  name-component.cpp  parent-childs-component.cpp  physics-components.cpp  physicsComponents.cpp  script-component.cpp  transform-component.cpp  transformComponent.cpp
src/shaders/: cubemap.frag  default.frag  default.vert  texture.frag
src/stream/: build-creator.cpp  dll-creator.cpp  file.cpp  project-creator.cpp  registry-recorder.cpp  script-creator.cpp  twe-type.cpp
src/twe/: camera.cpp  ebo.cpp  engine.cpp  fbo.cpp  file.cpp  gui.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  modelloader.cpp  object.cpp  physics.cpp  scene.cpp  shader.cpp  shape.cpp  test.cpp  texture.cpp  time.cpp  transform.cpp  twelogo.cpp  vao.cpp  vbo.cpp
src/ui-build/: ui-build.cpp
src/undo-redo/: ur-control.cpp
test/: main.cpp  registry-loader.hpp  test.cpp  test.hpp  test.project
test/models/wheel/: wheel.fbx
test/scenes/: Scene1.scene  test2.scene  testscene.json  testscene.scene  testscene2.scene
test/scripts/: CameraController.hpp  CollisionDetectionTest.hpp  DirBehavior.hpp  RGBLight.hpp  RaycastTest.hpp  RotateRGBCube.hpp
test/scripts/cmake-file-for-scripts-creation-example/: CMakeLists.txt
test/shaders/: collider.frag  cubemap.frag  default.frag  default.vert
(+47 files in other folders)
